[gd_scene format=3 uid="uid://byw16m8d51wrn"]

[ext_resource type="Script" uid="uid://bgm5k4hf3y4ef" path="res://Package Spinner/spinner.gd" id="1_ihtym"]

[node name="Spinner" type="Node3D" unique_id=1415344120]
script = ExtResource("1_ihtym")

[node name="PackageCenterTarget" type="Marker3D" parent="." unique_id=790448288 groups=["PackageTarget"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.14051163, 0)

[node name="Camera3D" type="Camera3D" parent="." unique_id=212443027]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.0637054)

[node name="SpawnLocation" type="Marker3D" parent="." unique_id=345543053]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.4976015, 0)

[connection signal="child_entered_tree" from="." to="." method="_on_child_entered_tree"]
